--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h4>Tip : Guess The Numbers between 0 to 20</h4>
             <h3>Lets Play :)</h3>
             <div class="user-input">
-            <input type="text" pattern="\d*" name="" id="userInput">
+            <input type="tel" id="userInput">
             </div>
             <button id="btn">Ok</button>
             <span id="ans">All The best!</span>
