--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="border">
             <h1>Guess The Number Game</h1>
-            <h4>Tip : Guess The Numbers between 0 to 20</h4>
+            <h4> I Picked 1 Number from 0 to 20 .So You have to guess that number Which I have Picked</h4>
             <h3>Lets Play :)</h3>
             <div class="user-input">
             <input type="tel" id="userInput">
